apparently fixed the concurrency issue i was running into by upgrading to the latest version of the surefire plugin